[gd_scene load_steps=9 format=3 uid="uid://lrpfqyo4avr2"]

[ext_resource type="Script" path="res://scripts/menu/game_guide.gd" id="1_ievus"]
[ext_resource type="Theme" uid="uid://cmpht74onoe3b" path="res://assets/buttons/themes/confirm_dialog_theme.tres" id="1_jdc3f"]
[ext_resource type="Texture2D" uid="uid://dlt80dog0qwel" path="res://assets/buttons/icons/arrow_left_24dp.png" id="2_r7tao"]
[ext_resource type="Texture2D" uid="uid://q003ob4ghyee" path="res://assets/buttons/icons/close_32.png" id="3_cuu2t"]
[ext_resource type="Texture2D" uid="uid://u2d7lxxp73yp" path="res://assets/buttons/icons/arrow_right_24dp.png" id="3_e4xwd"]
[ext_resource type="Texture2D" uid="uid://c61kptdu3hyr4" path="res://assets/buttons/icons/place_holder_profile.png" id="3_ycxtc"]
[ext_resource type="Texture2D" uid="uid://crvwl3givlide" path="res://assets/buttons/icons/arrow_left_24dp_hover.png" id="4_4rbp6"]
[ext_resource type="Texture2D" uid="uid://dck83eee6iq1l" path="res://assets/buttons/icons/arrow_right_24dp_hover.png" id="8_fyhtb"]

[node name="GameGuide" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ievus")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.5
offset_top = -241.5
offset_right = 251.5
offset_bottom = 241.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jdc3f")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 115
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Guia Juegos"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
process_mode = 3
layout_mode = 2
icon = ExtResource("3_cuu2t")
clip_text = true
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonBack" type="TextureButton" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_r7tao")
texture_pressed = ExtResource("2_r7tao")
texture_hover = ExtResource("4_4rbp6")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Image" type="TextureRect" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ycxtc")

[node name="Text" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="ButtonNext" type="TextureButton" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_e4xwd")
texture_pressed = ExtResource("3_e4xwd")
texture_hover = ExtResource("8_fyhtb")
stretch_mode = 3

[node name="PageNumber" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1/2"
horizontal_alignment = 1

[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer2/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/ButtonNext" to="." method="_on_button_next_pressed"]
